# iup_example

./: 0001-tec_uname.patch  README.md  meson.build  org.example.App.json  org.example.App.json~
data/: org.example.App.desktop.in  org.example.App.gschema.xml
src/: init.lua  iup_example.in  meson.build
